Updated the README file with project instructions

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 FLASK_APP=app.py
 JWT_SECRET_KEY=your-secret-key
-SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:root@localhost/FlavorFi
+DATABASE_URL=postgresql://postgres:root@localhost:5432/flavorfi_db
 FLASK_ENV=production
